# localcommitment

./: CMakeLists.txt  cmake_uninstall.cmake.in  post_install.cmake  readme.md
src/: main.cpp
